fixed contact name not aligning properly

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,7 @@ p {
     height: 50%;
     width: 40%;
     margin-left: -3rem;
+    margin-top: 0.5rem;
     
 }
 
